Выполнены правки модалки

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic');
 /*Основные стили */
-/*TODO Проставить потом марджинги и пэддинги = 0 для всех списков. Чтобы от глобального уйти*/
-/*Убрать везде аутлайны и настроить фокус*/
-
 * {
   padding: 0;
   margin: 0;
@@ -17,7 +14,6 @@ body {
   font-weight: 400;
   color: #000000;
   position: relative;
-
 }
 
 a {
@@ -69,8 +65,7 @@ a {
 }
 
 /*Основные блоки и их модификаторы*/
-/*TODO В IE11 надпись у кнопок уезжает вверх. Разобраться*/
-/*TODO Надо сделать надписи тускнеющими при нажатии. забыл*/
+
 .button {
   display: inline-block;
   vertical-align: middle;
@@ -104,8 +99,6 @@ a {
   background-color: #d7373b;
   border-top: 3px solid #c13135;
   color: rgba(227, 115, 118, 0.3);
-  /*min-height: 47px;*/
-
 }
 
 .button--green {
@@ -648,19 +641,6 @@ input[type="radio"].visually-hidden {
   display: block;
 }
 
-/*Крайние справа/слева лого партнеров позиционирую отдельно. Т.к. рисунки все разной ширины. Просто так в PP не попадешь*/
-/*.partner-logo__pict--left-logo {*/
-/*position: absolute;*/
-/*top: 15px;*/
-/*left: 30px;*/
-/*}*/
-
-/*.partner-logo__pict--right-logo {*/
-/*position: absolute;*/
-/*top: 4px;*/
-/*left: 64px;*/
-/*}*/
-
 .contacts {
   text-align: center;
   background-image: url("../img/map_new.jpg");
@@ -717,9 +697,6 @@ input[type="radio"].visually-hidden {
   display: inline-block;
 }
 
-.contacts_map {
-
-}
 
 .footer {
   display: flex;
@@ -825,12 +802,14 @@ input[type="radio"].visually-hidden {
   width: 960px;
   padding-top: 67px;
   padding-left: 100px;
-  position: absolute;
-  top: 1706px;
-  left: 470px;
+  padding-right: 100px;
+  position: fixed;
+  top: 211px;
+  left: 471px;
   box-sizing: border-box;
   box-shadow: 0 0 40px rgba(00, 00, 00, 0.5);
   background-color: #ffffff;
+  z-index: 100;
 
 }
 
@@ -838,14 +817,15 @@ input[type="radio"].visually-hidden {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  margin-bottom: 40px;
+  margin-bottom: 42px;
+  position: relative;
 }
 
 .modal-writeus__title {
   font-size: 45px;
   line-height: 1;
   font-weight: 500;
-  margin-right: 440px;
+  /*margin-right: 440px;*/
 }
 
 .modal-close-button {
@@ -855,6 +835,9 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
   background-position: center center;
   background-color: #ffffff;
+  position: absolute;
+  top: 11px;
+  left: 748px;
   opacity: 0.3;
   border: none;
   align-self: center;
@@ -864,6 +847,7 @@ input[type="radio"].visually-hidden {
 .modal-close-button:focus {
   opacity: 1;
   outline: none;
+  cursor: pointer;
 }
 
 .modal-close-button:active {
@@ -871,15 +855,11 @@ input[type="radio"].visually-hidden {
 }
 
 .modal-writeus__form {
-  display: flex;
-  flex-direction: column;
-  align-content: space-between;
-  flex-wrap: wrap;
   margin-bottom: 84px;
 }
 
 .modal-writeus__form-internal-container {
-  width: 760px;
+  /*width: 760px;*/
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -887,16 +867,12 @@ input[type="radio"].visually-hidden {
   flex-grow: 1;
 }
 
-.modal-writeus__form-item {
-  width: 360px;
-}
-
 .modal-form__input-item {
   width: 360px;
   height: 50px;
   box-sizing: border-box;
   min-height: 33px;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
 }
 
 .modal-form__input-item[placeholder] {
@@ -905,20 +881,20 @@ input[type="radio"].visually-hidden {
 
 .modal-form__text-area {
   width: 100%;
-  height: 100px;
-  margin-bottom: 47px;
-  padding-top: 15px;
+  height: 103px;
+  margin-bottom: 46px;
+  padding-top: 12px;
 }
 
 .modal-form__text-area[placeholder] {
-  text-indent: 15px;
+text-indent: 15px;
 }
 
 .modal-writeus__label {
-  line-height: 1.125;
-  font-weight: 700;
-  display: block;
-  margin-bottom: 10px;
+line-height: 1.125;
+font-weight: 700;
+display: block;
+margin-bottom: 8px;
 }
 
 .modal-form__input-item:invalid {
@@ -948,6 +924,8 @@ input[type="radio"].visually-hidden {
 
 .modal-writeus__submit-button {
   width: 260px;
+  border: none;
+  border-top: 3px solid #fb565a;
 }
 
 /*СТРАНИЦА КАТАЛОГА*/
@@ -1147,10 +1125,9 @@ input[type="radio"].visually-hidden {
   left: -37px;
   opacity: 0.4;
 }
-
-/*----!!!!----*/
+/*Сетка*/
 .filter-form__grid-radiobutton:not(:disabled) + .filter-form__grid-label:hover::before {
-  opacity: 0.1;
+  opacity: 1;
 }
 
 .filter-form__grid-radiobutton:disabled + .filter-form__grid-label {
@@ -1216,6 +1193,14 @@ input[type="radio"].visually-hidden {
   position: relative;
 }
 
+.filter-form__features-checkbox:not(:disabled) + .filter-form__features-label:hover::before {
+  opacity: 1;
+}
+
+.filter-form__features-checkbox:disabled + .filter-form__features-label {
+  opacity: 0.1;
+}
+
 .filter-form__features-checkbox + .filter-form__features-label::before {
   position: absolute;
   content: "";
@@ -1227,14 +1212,6 @@ input[type="radio"].visually-hidden {
   opacity: 0.4;
   top: -2px;
   left: -37px;
-}
-
-.filter-form__features-checkbox:hover + .filter-form__features-label:hover::before {
-  opacity: 1;
-}
-
-.filter-form__features-checkbox:disabled + .filter-form__features-label {
-  opacity: 0.1;
 }
 
 .filter-form__features-checkbox:checked + .filter-form__features-label::after {
@@ -1323,8 +1300,8 @@ input[type="radio"].visually-hidden {
   border-style: solid;
   border-width: 0 5px 11px 5px;
   border-color: transparent transparent #a6a6a6 transparent;
-  top: 0;
-  left: 0;
+  top: -5px;
+  left: 6px;
   opacity: 0.2;
 }
 
@@ -1336,8 +1313,8 @@ input[type="radio"].visually-hidden {
   border-style: solid;
   border-width: 11px 5px 0 5px;
   border-color: #a6a6a6 transparent transparent transparent;
-  top: 0;
-  left: 0;
+  top: -4px;
+  left: -4px;
   opacity: 0.2;
 }
 
