--- a/css/style.css
+++ b/css/style.css
@@ -766,6 +766,7 @@ input[type="radio"].visually-hidden {
   display: inline-block;
 }
 
+
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -883,6 +884,7 @@ input[type="radio"].visually-hidden {
 
 /*Стилизация модального окна "Напишите нам"*/
 .modal-window-container {
+  /*display: none;*/
   width: 960px;
   padding-top: 67px;
   padding-left: 100px;
@@ -899,8 +901,10 @@ input[type="radio"].visually-hidden {
   box-shadow: 0 0 40px rgba(00, 00, 00, 0.5);
   background-color: #ffffff;
   z-index: 100;
-
 }
+/*.modal--show {*/
+  /*display: block;*/
+/*}*/
 
 .modal-writeus__header {
   display: -webkit-box;
